--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="./reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@500;700&family=Lobster&family=Oleo+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,500,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
-    <title>Yelpy</title>
+    <title></title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
